--- a/src/scss/general-block/_new-footer.scss
+++ b/src/scss/general-block/_new-footer.scss
@@ -11,7 +11,7 @@
   &__left {
     display: flex;
     flex-direction: column;
-    gap: 26px;
+    // gap: 26px;
   }
   &__menu {
     display: flex;
